# salix_nanshe

./: .gitignore  CMakeLists.txt  LICENSE  run_nanshe.sh  structure.txt
src/client/: CMakeLists.txt  main.cpp
src/core/: IClient.h  IDaemon.h  IEngine.h
src/daemon/: CMakeLists.txt  main.cpp
src/engine/llama/: Llama_Engine.cpp  Llama_Engine.h
src/platform/openbsd/: OpenBSD_Daemon.cpp  OpenBSD_Daemon.h
